fix overlap

--- a/css/editordash.css
+++ b/css/editordash.css
@@ -1674,7 +1674,7 @@
             width: 90%;
             margin: 0 auto;
             min-height: 0;
-            max-height: 100%;
+            max-height: 95%;
         }
 
         .games-filter-container {
